<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VPNUK android</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="permission_description">Allows another app to control OpenVPN</string>
    <string name="no_status_yet">No Status yet</string>
    <string name="no_now">Not now</string>
    <string name="show_my_ip">Show my IP</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="start_vpn_uuid">UUID Profile</string>
    <string name="start_embedded">Embedded Profile</string>


</resources>
