<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.vpnuk.android.app.remote.MainFragment">


        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/helloworld"
            android:layout_alignParentTop="true"
            android:text="@string/no_status_yet" />

        <Button
            android:id="@+id/startVPN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_now"
            android:visibility="visible"
            android:layout_below="@+id/helloworld"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    <TextView
            android:id="@+id/helloworld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/hello_world" />

        <TextView
            android:id="@+id/MyIpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/helloworld"
            android:layout_alignParentLeft="true"
            tools:text="TextView" />

        <Button
            android:id="@+id/getMyIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_my_ip"
            android:layout_below="@+id/startVPN"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            android:layout_below="@+id/helloworld"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/startembedded"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_embedded"
            android:layout_below="@+id/disconnect"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

</RelativeLayout>
